--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -16,6 +16,8 @@ resource.already.exists: This resource already exists
 
 resourceClassification.already.exists: This classification already exists
 
+site.already.exists: This site already exists
+
 timetable.already.exists: This timetable already exists
 
 timetableLine.endTime.control: End time must be greather than beginning time
